parser/tests/bad/const02-1.st
% re-assignment on constant reference
%   identifier

const i := 0
i := 1
